Optimized unit tests